# ElenaOS-PC-Simulator

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  ElenaOS_InitProject.py  ElenixOS-Tools.py  README.md  lv_conf.h  simulator.code-workspace
.github/workflows/: build-native.yml  deploy-wasm-pages.yml
assets/: Crown.psd  SideButton.psd  SimulatorCrown.psd  SimulatorMask.psd  SimulatorSideButton.psd  WatchCard.psd  flash_light.psd
debugger_box/: debug_ui.c  debug_ui.h  debug_var.c  debug_var.h  debug_var_defs.h
fs/: my_app.eapk
fs/.sys/: state.json
fs/.sys/app/apps/cn.sab1e.app/: main.js  manifest.json  test_lv_anim.mjs  test_lv_arc.mjs  test_lv_bar.mjs  test_lv_button.mjs  test_lv_buttonmatrix.mjs  test_lv_calendar.mjs  test_lv_canvas.mjs  test_lv_chart.mjs  test_lv_checkbox.mjs  test_lv_color.mjs  test_lv_dropdown.mjs  test_lv_image.mjs  test_lv_imagebutton.mjs  test_lv_label.mjs  test_lv_obj.mjs  test_lv_screen.mjs  test_lv_timer.mjs  test_sni_exit_cleanup.mjs
fs/.sys/app/apps/cn.sab1e.app/assets/: log.txt
fs/.sys/app/apps/cn.sab1e.calculator/: main.js  manifest.json
fs/.sys/app/apps/cn.sab1e.lv_examples/: main.js  manifest.json
fs/.sys/app/apps/cn.sab1e.lv_examples/examples/: lv_anim.mjs  lv_arc.mjs  lv_bar.mjs  lv_timer.mjs
fs/.sys/app/apps/com.elenixos.demo/: main.js  manifest.json
fs/.sys/config/: app_order.json  cfg.json
fs/.sys/wf/faces/cn.sab1e.clock/: main.js  manifest.json
fs/.sys/wf/wf_data/cn.sab1e.clock/: config.json
main/: wasm_shell.html
main/src/: eos_port.c  jerry_port.c  mac_api.c  mac_api.h  main.c
main/src/port/audio/: eos_port_audio.c  eos_port_audio.h
main/src/port/battery/: eos_port_battery.c  eos_port_battery.h
main/src/port/display/: eos_port_display.c  eos_port_display.h
main/src/port/power/: eos_port_power.c  eos_port_power.h
main/src/port/sensor/: eos_port_sensor.c  eos_port_sensor.h
main/src/port/time/: eos_port_time.c  eos_port_time.h
main/src/port/vibrator/: eos_port_vibrator.c  eos_port_vibrator.h
